<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DogecoinTicker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Cryptsy</item>
        <item >CoinedUp</item>
        <item >Coins-E</item>
        <item >Bter</item>
        <item >Vircurex</item>
        <item >DogecoinTicker</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>


    <string name="title_activity_default">Exchange</string>
    <string name="title_activity_cryptsy">Cryptsy</string>
    <string name="title_activity_coinedup">CoinedUp</string>
    <string name="title_activity_coinse">Coins-E</string>
    <string name="title_activity_bter">Bter</string>
    <string name="title_activity_vircurex">Vircurex</string>
    <string name="satoshi_currency">Satoshi</string>
    <string name="BTC_currency">BTC</string>
    <string name="mBTC_currency">mBTC</string>
    <string name="notification_tray">Show in Notification Tray</string>
    <string name="currency_to_use">Currency To Use With App</string>
    <string name="refresh">Refresh</string>
    <string name="exchange_title"></string>
    <string name="exchange_interval"></string>

    <string name="na">N/A</string>
    <string name="change_label">percent change</string>
    <string name="high_label">highest price</string>
    <string name="low_label">lowest price</string>
    <string name="current_label">current price</string>

    <!-- strings for currency converter -->
    <string name="converter_title">currency converter</string>
    <string name="dogecoin_converter_label">DOGECOIN</string>
    <string name="btc_converter_label">BTC</string>
    <string name="usd_converter_label">USD</string>
    <string name="equals">=</string>



    <string name="interval">Interval</string>
    <string name="interval1h">1h</string>
    <string name="interval3h">3h</string>
    <string name="interval12h">12h</string>
    <string name="interval24h">24h</string>
    <string name="interval3d">3d</string>
    <string name="interval7d">7d</string>
    <string name="interval14d">14d</string>
    <string name="interval30d">30d</string>

</resources>
