<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="christophior.dogecointicker.app">

    <!-- Titles 1/10-->
    <LinearLayout
        android:id="@+id/title"
        android:layout_below="@+id/graph"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/graph_background_color">
        <TextView
            android:id="@+id/exchange_title"
            android:text="@string/exchange_title"
            android:textColor="@color/exchange_title_color"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/exchange_title_padding_left"
            android:paddingTop="@dimen/exchange_title_padding_top"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_centerVertical="true"
            android:layout_height="0dp" />
        <TextView
            android:id="@+id/exchange_interval"
            android:text="@string/exchange_interval"
            android:textColor="@color/exchange_interval_color"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/exchange_title_padding_left"
            android:textSize="15sp"/>
    </LinearLayout>

    <!-- Graph 4/10-->
    <LinearLayout
        android:id="@+id/graph"
        android:layout_below="@+id/time_buttons"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="4"
        android:background="#ff98b865"/>

    <!-- Stats 3/10-->
    <LinearLayout
        android:id="@+id/stats"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="3">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:background="@drawable/borderframe"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:background="@drawable/borderframe"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/change_text"
                    android:text="@string/na"
                    android:textColor="@color/stat_label_color"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:paddingTop="@dimen/stats_top_padding"
                    android:paddingLeft="@dimen/stats_left_padding"
                    android:textSize="32sp"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="0dp" />
                <TextView
                    android:text="@string/change_label"
                    android:textColor="@color/label_color"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/stats_left_padding"
                    android:layout_width="fill_parent"
                    android:textSize="15sp"
                    android:gravity="left"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:text=""
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="0dp" />
                <TextView
                    android:text=""
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textSize="15sp"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="#fff">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/low_text"
                    android:text="@string/na"
                    android:textColor="@color/stat_label_color"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:paddingTop="@dimen/stats_top_padding"
                    android:paddingLeft="@dimen/stats_left_padding"
                    android:textSize="30sp"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="0dp" />
                <TextView
                    android:text="@string/low_label"
                    android:textColor="@color/label_color"
                    android:paddingLeft="@dimen/stats_left_padding"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textSize="15sp"
                    android:gravity="left"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/high_text"
                    android:text="@string/na"
                    android:textColor="@color/stat_label_color"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:paddingTop="@dimen/stats_top_padding"
                    android:paddingRight="@dimen/stats_right_padding"
                    android:textSize="30sp"
                    android:gravity="right"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_height="0dp" />
                <TextView
                    android:text="@string/high_label"
                    android:textColor="@color/label_color"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/stats_right_padding"
                    android:layout_width="fill_parent"
                    android:textSize="15sp"
                    android:gravity="right"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <!-- Converter 2/10 -->
    <LinearLayout
        android:id="@+id/converter"
        android:orientation="vertical"
        android:layout_below="@+id/stats"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:background="#e3e3e3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <TextView
                android:text="@string/converter_title"
                android:textSize="28dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="3">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="fill_parent"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="fill_parent"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="fill_parent"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
